concord_macros/tests/v5/dsl/fail/fail_old_mapping_arrow.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldMappingArrowApi { base https "example.com" }

    GET Broken
        path ["broken"]
        -> Json<String> | String => r
}

fn main() {}
